[tool.poetry]
name = "rich-utils"
version = "0.1.1"
description = "Utility methods and classes for the \"rich\" package."
authors = ["Tim Wedde <timwedde@icloud.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
rich = "^6.1.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
